--- a/style.css
+++ b/style.css
@@ -149,6 +149,60 @@ button{
     border-radius: 30px;
     color: hsl(0, 0%, 100%);
     background-color: hsl(224, 30%, 27%);
-    margin-top: 20px;
+    margin-top: 10px;
     font-weight: 600;
+}
+
+@media screen and (min-width:600px) {
+    body{
+        display: flex;
+    }
+
+.container{
+    display: flex;
+    flex-direction: row;
+    width: 50vw;
+    height: 50vh;
+    border-radius: 30px;
+    box-shadow: 8px 0 10px rgba(0, 0, 0, 0.2);
+
+}
+
+.top{
+    height: 100%;
+    border-radius: 30px;
+    width: 45%;
+    display: flex;
+    padding-top: 30px;
+}
+
+.summary{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 30px;
+}
+
+.list-item{
+    margin-top: 0;
+}
+
+.circle{
+    height: 150px;
+    width: 150px;
+    margin-top: 20px;
+}
+.circle h1{
+    font-size: 40px;
+}
+.great{
+    font-size: 30px;
+}
+
+.text{
+    text-align: center;
+}
+    
 }
