--- a/style.css
+++ b/style.css
@@ -161,8 +161,8 @@ button{
 .container{
     display: flex;
     flex-direction: row;
-    width: 50vw;
-    height: 50vh;
+    width: 40rem;
+    height: 30rem;
     border-radius: 30px;
     box-shadow: 8px 0 10px rgba(0, 0, 0, 0.2);
 
@@ -171,38 +171,43 @@ button{
 .top{
     height: 100%;
     border-radius: 30px;
-    width: 45%;
+    width: 17rem;
     display: flex;
     padding-top: 30px;
 }
 
 .summary{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 35px;
+    flex: 1;
+    
 }
 
 .list-item{
     margin-top: 0;
+    justify-content: center;
+}
+
+.percent{
+    margin-left: 80px;
 }
 
 .circle{
     height: 150px;
     width: 150px;
-    margin-top: 20px;
 }
+
 .circle h1{
-    font-size: 40px;
-}
-.great{
-    font-size: 30px;
+    font-size: 50px;
 }
 
 .text{
     text-align: center;
+    width: 80%;
+    margin-top: 30px;
 }
-    
+
+.great{
+    font-size: 30px;
+}
 }
